src/objects/Medication__c.object
<CustomObject>
    <description>Table holding a row for each medication a patient submitted on their health history</description>
    <fields>
        <fullName>Administered_Suffix__c</fullName>
        <label>Administered Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_Taken__c</fullName>
        <label>Amount Taken</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Inactive__c</fullName>
        <description>For importing medication data through DoseSpot - Date medication became inactive. This
includes discontinued or completed.</description>
        <label>Date Inactive</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Last_Filled__c</fullName>
        <description>For importing medication data through DoseSpot</description>
        <label>Date Last Filled</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Reported__c</fullName>
        <description>For importing medication data through DoseSpot - Date medication was reported to
DoseSpot</description>
        <label>Date Reported</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Written__c</fullName>
        <description>For importing medication data through DoseSpot</description>
        <label>Date Written</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Supply__c</fullName>
        <description>For importing medication data through DoseSpot - Prescribed days supply</description>
        <label>Days Supply</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dispense_Units__c</fullName>
        <description>For importing medication data through DoseSpot - Prescribed dispense units</description>
        <label>Dispense Units</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor__c</fullName>
        <label>Doctor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_Classification__c</fullName>
        <label>Drug Classification</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>For_What__c</fullName>
        <label>For What</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Drug_Name__c</fullName>
        <description>For importing medication data through DoseSpot</description>
        <label>Generic Drug Name</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hour_Administered__c</fullName>
        <label>Hour Administered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_Often__c</fullName>
        <description>times daily,  medication is taken</description>
        <label>How Often</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>2x/day</fullName>
                </value>
                <value>
                    <fullName>3x/day</fullName>
                </value>
                <value>
                    <fullName>4x or more</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>As needed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lexi_Drug_Syn_ID__c</fullName>
        <description>For importing medication data through DoseSpot - LexiComp synonym identifier</description>
        <label>Lexi-Drug Synonym ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lexi_Generic_Product_ID__c</fullName>
        <description>For importing medication data through DoseSpot - LexiComp generic product identifier</description>
        <label>Lexi Generic Product ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lexi_Synonym_Type_ID__c</fullName>
        <description>For importing medication data through DoseSpot - LexiComp synonym type identifier</description>
        <label>Lexi Synonym Type ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lexicomp_Drug_ID__c</fullName>
        <description>For importing medication data through DoseSpot</description>
        <label>Lexicomp Drug ID</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medication_ID__c</fullName>
        <description>For importing medication data through DoseSpot - DoseSpot’s medication identifier</description>
        <label>Medication ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Medication_Status__c</fullName>
        <description>Active or Inactive or Discontinued or Deleted or Completed or Unknown</description>
        <label>Medication Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Discontinued</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minute_Administered__c</fullName>
        <label>Minute Administered</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monograph_Path__c</fullName>
        <description>For importing medication data through DoseSpot - Monograph URL</description>
        <label>Monograph Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDC__c</fullName>
        <description>For importing medication data through DoseSpot - Representative NDC</description>
        <label>NDC</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_DoseSpot__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that the medication was manually added (not found through a search of DoseSpot&apos;s medication/allergy set)</description>
        <label>No DoseSpot (added manually)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Substitution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For importing medication data through DoseSpot - Indicates dispense as written</description>
        <label>No Substitution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>For importing medication data through DoseSpot - Prescription instructions (from prescriber to patient) - Received from DoseSpot as &apos;Notes&apos; field</description>
        <label>Prescriber Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Patient_Health_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient Health History</label>
        <referenceTo>Patient_Health_History__c</referenceTo>
        <relationshipLabel>Medications</relationshipLabel>
        <relationshipName>Medications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Medications</relationshipLabel>
        <relationshipName>Medications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payer__c</fullName>
        <description>For importing medication data through DoseSpot - Surescripts History source payer name</description>
        <label>Payer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pharmacy_ID__c</fullName>
        <description>For importing medication data through DoseSpot - DoseSpot’s pharmacy identifier</description>
        <label>Pharmacy ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Notes__c</fullName>
        <description>For importing medication data through DoseSpot</description>
        <label>Pharmacy Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prescriber_User_ID__c</fullName>
        <description>For importing medication data through DoseSpot - DoseSpot’s identifier for the clinician who prescribed this medication</description>
        <label>Prescriber User ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prescription_Status__c</fullName>
        <description>For importing medication data through DoseSpot</description>
        <label>Prescription Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Entered</fullName>
                </value>
                <value>
                    <fullName>Printed</fullName>
                </value>
                <value>
                    <fullName>Sending</fullName>
                </value>
                <value>
                    <fullName>eRxSent</fullName>
                </value>
                <value>
                    <fullName>FaxSent</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Edited</fullName>
                </value>
                <value>
                    <fullName>EpcsError</fullName>
                </value>
                <value>
                    <fullName>EpcsSigned</fullName>
                </value>
                <value>
                    <fullName>ReadyToSign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>For importing medication data through DoseSpot - Prescribed dispense quantity</description>
        <label>Quantity</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refills__c</fullName>
        <description>For importing medication data through DoseSpot - Prescribed number of refills</description>
        <label>Refills</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <description>For importing medication data through DoseSpot - Route the drug is to be taken</description>
        <label>Route</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RxCUI__c</fullName>
        <description>For importing medication data through DoseSpot - RxNorm drug identifier</description>
        <label>RxCUI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <description>For importing medication data through DoseSpot - Controlled substance schedule</description>
        <label>Schedule</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>For importing medication data through DoseSpot - DoseSpot&apos;s medication list source</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>SurescriptsHistory</fullName>
                </value>
                <value>
                    <fullName>Prescription</fullName>
                </value>
                <value>
                    <fullName>SelfReported</fullName>
                </value>
                <value>
                    <fullName>Imported</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <description>For importing medication data through DoseSpot - Comment that was entered when medication was discontinued or completed</description>
        <label>Status Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strength__c</fullName>
        <description>For importing medication data through DoseSpot - Strength of the medication</description>
        <label>Strength</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Surgical_Notes_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ties a medication to a surgical note form so we can track what drugs were administered for surgery</description>
        <label>Surgical Notes Form</label>
        <referenceTo>Surgical_Notes_Form__c</referenceTo>
        <relationshipLabel>Medications</relationshipLabel>
        <relationshipName>Medications</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Medication</label>
    <nameField>
        <label>Medication Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>